Thu Apr  4 16:56:17 UTC 2013  Dennis Feiock  <dfeiock at iupui dot edu>

        * cuts/iccm/arch/opensplice/compiler/Downcall_Event.cpp:
        * cuts/iccm/arch/opensplice/compiler/Event_Traits.cpp:
        * cuts/iccm/arch/opensplice/compiler/Upcall_Event.cpp:

          Fixed logic to allocate and copy string rather than using
          substring.

Thu Apr  4 16:15:51 UTC 2013  Dennis Feiock  <dfeiock at iupui dot edu>

        * cuts/iccm/arch/opensplice/compiler/Downcall_Event.h:
        * cuts/iccm/arch/opensplice/compiler/Downcall_Event.cpp:
        * cuts/iccm/arch/opensplice/compiler/Event_Traits.h:
        * cuts/iccm/arch/opensplice/compiler/Event_Traits.cpp:
        * cuts/iccm/arch/opensplice/compiler/Stub_File.cpp:
        * cuts/iccm/arch/opensplice/compiler/Upcall_Event.h:
        * cuts/iccm/arch/opensplice/compiler/Upcall_Event.cpp:

          Updated event generation to support packages/modules.

Tue Apr  2 17:37:24 UTC 2013  Dennis Feiock  <dfeiock at iupui dot edu>

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/Component_Implementation.cpp:

          Missed a section which relies on emulates_async

Mon Apr  1 19:45:41 UTC 2013  Dennis Feiock  <dfeiock at iupui dot edu>

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/Component_Implementation.cpp:

          Checks the emulates_async trait when generating InEventPort
          implementations.

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/Traits.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/Traits.inl:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/ciao/CIAO_Traits.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/ciao/CIAO_Traits.inl:

          Added emulates_async trait.  Default is false, set to tru for ciao.

Wed Mar 27 14:59:10 UTC 2013  Dennis Feiock  <dfeiock at iupui dot edu>

        * cuts/iccm/arch/dds/servant/DDS_Servant_T.cpp:
