@@ -47,7 +47,15 @@ int Event_Traits::visit_root (AST_Root * node)
 //
 int Event_Traits::visit_module (AST_Module * node)
 {
-  return this->visit_scope (node);
+  ACE_CString local_name (node->local_name ()->get_string ());
+  ACE_CString backup (this->scope_);
+  this->scope_ += local_name + "::";
+
+  if (0 != this->visit_scope (node))
+    return -1;
+
+  this->scope_ = backup;
+  return 0;
 }
 
 //
@@ -78,23 +86,23 @@ int Event_Traits::visit_eventtype (AST_EventType * node)
     << "{"
     << "public:" << std::endl
     << "// traits for the reader(s)" << std::endl
-    << "typedef ::" << dds_event << "DataReader reader_type;"
-    << "typedef ::" << dds_event << "DataReader * reader_ptr_type;"
-    << "typedef ::" << dds_event << "DataReader * reader_var_type;"
+    << "typedef ::" << this->scope_ << dds_event << "DataReader reader_type;"
+    << "typedef ::" << this->scope_ << dds_event << "DataReader * reader_ptr_type;"
+    << "typedef ::" << this->scope_ << dds_event << "DataReader * reader_var_type;"
     << std::endl
     << "// traits for the writer(s)" << std::endl
-    << "typedef ::" << dds_event << "DataWriter writer_type;"
-    << "typedef ::" << dds_event << "DataWriter * writer_ptr_type;"
-    << "typedef ::" << dds_event << "DataWriter * writer_var_type;"
+    << "typedef ::" << this->scope_ << dds_event << "DataWriter writer_type;"
+    << "typedef ::" << this->scope_ << dds_event << "DataWriter * writer_ptr_type;"
+    << "typedef ::" << this->scope_ << dds_event << "DataWriter * writer_var_type;"
     << std::endl
     << "// traits for the type support system" << std::endl
-    << "typedef ::" << dds_event << "TypeSupport dds_typesupport_type;"
-    << "typedef ::" << dds_event << "TypeSupport * dds_typesupport_var_type;"
-    << "typedef ::" << dds_event << "TypeSupport * dds_typesupport_ptr_type;"
+    << "typedef ::" << this->scope_ << dds_event << "TypeSupport dds_typesupport_type;"
+    << "typedef ::" << this->scope_ << dds_event << "TypeSupport * dds_typesupport_var_type;"
+    << "typedef ::" << this->scope_ << dds_event << "TypeSupport * dds_typesupport_ptr_type;"
     << std::endl
     << "// event mapping types" << std::endl
-    << "typedef ::" << dds_event << " dds_event_type;"
-    << "typedef ::" << dds_event << ctx->typeseq_suffix_ << " dds_event_sequence_type;"
+    << "typedef ::" << this->scope_ << dds_event << " dds_event_type;"
+    << "typedef ::" << this->scope_ << dds_event << ctx->typeseq_suffix_ << " dds_event_sequence_type;"
     << "typedef ::" << full_name << "Upcall upcall_event_type;"
     << "typedef ::" << full_name << "Downcall downcall_event_type;"
     << "typedef ::" << full_name << " corba_event_type;"
