@@ -7,6 +7,7 @@
 
 #include "ast_eventtype.h"
 #include "ast_field.h"
+#include "ast_module.h"
 
 #include "utl_identifier.h"
 #include <iostream>
@@ -31,6 +32,23 @@ Upcall_Event::~Upcall_Event (void)
 {
 
 }
+
+//
+// visit_module
+//
+int Upcall_Event::visit_module (AST_Module * node)
+{
+  ACE_CString local_name (node->local_name ()->get_string ());
+  ACE_CString backup (this->marshal_scope_);
+  this->marshal_scope_ += local_name + "_";
+
+  if (0 != this->visit_scope (node))
+    return -1;
+
+  this->marshal_scope_ = backup;
+  return 0;
+}
+
 
 //
 // visit_eventtype
@@ -78,15 +96,15 @@ int Upcall_Event::visit_eventtype (AST_EventType * node)
     << "private:" << std::endl
     << dds_event << " & dds_event_;"
     << std::endl
-    << "::CORBA::Boolean _tao_marshal__" << local_name << " (TAO_OutputCDR &, TAO_ChunkInfo &) const;"
-    << "::CORBA::Boolean _tao_unmarshal__" << local_name << " (TAO_InputCDR &, TAO_ChunkInfo &);"
+    << "::CORBA::Boolean _tao_marshal__" << this->marshal_scope_ << local_name << " (TAO_OutputCDR &, TAO_ChunkInfo &) const;"
+    << "::CORBA::Boolean _tao_unmarshal__" << this->marshal_scope_ << local_name << " (TAO_InputCDR &, TAO_ChunkInfo &);"
     << "};";
 
   this->sfile_
     << "::CORBA::Boolean " << this->upcall_event_
-    << "::_tao_marshal__" << local_name << " (TAO_OutputCDR &, TAO_ChunkInfo &) const{return false;}"
+    << "::_tao_marshal__" << this->marshal_scope_ << local_name << " (TAO_OutputCDR &, TAO_ChunkInfo &) const{return false;}"
     << "::CORBA::Boolean " << this->upcall_event_
-    << "::_tao_unmarshal__" << local_name << " (TAO_InputCDR &, TAO_ChunkInfo &){return false;}";
+    << "::_tao_unmarshal__" << this->marshal_scope_ << local_name << " (TAO_InputCDR &, TAO_ChunkInfo &){return false;}";
 
   return 0;
 }
