@@ -1,3 +1,15 @@
+Thu Apr  4 17:11:57 UTC 2013  Dennis Feiock  <dfeiock at iupui dot edu>
+
+        * cuts/iccm/arch/rtidds/compiler/Downcall_Event.h:
+        * cuts/iccm/arch/rtidds/compiler/Downcall_Event.cpp:
+        * cuts/iccm/arch/rtidds/compiler/Event_Traits.h:
+        * cuts/iccm/arch/rtidds/compiler/Event_Traits.cpp:
+        * cuts/iccm/arch/rtidds/compiler/Stub_File.cpp:
+        * cuts/iccm/arch/rtidds/compiler/Upcall_Event.h:
+        * cuts/iccm/arch/rtidds/compiler/Upcall_Event.cpp:
+
+          Updated event generation to support pacakges/modules.
+
 Thu Apr  4 16:56:17 UTC 2013  Dennis Feiock  <dfeiock at iupui dot edu>
 
         * cuts/iccm/arch/opensplice/compiler/Downcall_Event.cpp:
